--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@react-spring/web": "^10.0.3",
+    "@studio-freight/lenis": "^1.0.42",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
+    "gsap": "^3.13.0",
+    "lottie-react": "^2.4.1",
     "next": "15.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.65.0",
+    "react-intersection-observer": "^9.16.0",
+    "react-tsparticles": "^2.12.2",
     "zod": "^4.1.12"
   },
   "devDependencies": {
